Incorrect display of path of editted data #40331

Closed
opened 2014-05-23 17:05:16 +02:00 by Willi · 9 comments

System Information
Win7/64, AMD HD6850

Blender Version
blender-2.70-90db85a-win649 (May 22), and all versions before

Short description of error
At the top of the properties window, there is always the path to the object being editted below. In this case: "Cube -> Material -> Material.BI". With a node material containing both, BI and Cycles nodes, there is the path of the BI material shown even though the current engine is Cycles and the properties below shows the Cycles material setup. Not a major issue, but the displayed path should match what is being editted.

Exact steps for others to reproduce the error
I think a screenshot is sufficient in this case:
Bild_332.png

**System Information** Win7/64, AMD HD6850 **Blender Version** blender-2.70-90db85a-win649 (May 22), and all versions before **Short description of error** At the top of the properties window, there is always the path to the object being editted below. In this case: "Cube -> Material -> Material.BI". With a node material containing both, BI and Cycles nodes, there is the path of the BI material shown even though the current engine is Cycles and the properties below shows the Cycles material setup. Not a major issue, but the displayed path should match what is being editted. **Exact steps for others to reproduce the error** I think a screenshot is sufficient in this case: ![Bild_332.png](https://archive.blender.org/developer/F90471/Bild_332.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a blend file to reproduce the issue…

Please always attach a blend file to reproduce the issue…
Author
[Test_186.blend](https://archive.blender.org/developer/F90596/Test_186.blend)

Thanks :)

Thanks :)
Bastien Montagne self-assigned this 2014-05-24 15:40:02 +02:00

This issue was referenced by c75261c8cb

This issue was referenced by c75261c8cba75ac3f4313834e9aae91378cbfc33

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c75261c8cb.

Closed by commit c75261c8cb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40331
No description provided.