Fix T40331: Incorrect display of path of editted data.